<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AmeriLink</string>
    <string name="my_count">我的账号</string>
    <string name="your_setting">您的设置</string>
    <string name="search">搜索</string>
    <string name="order">订单</string>
    <string name="my">我的</string>
    <string name="my_order">我的订单</string>
    <string name="login">登陆</string>
    <string name="devlope_panel">开发面板</string>
    <string name="language">当前语言</string>
    <string name="money">当前货币</string>
    <string name="danwei">单位&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="money_inform">您已经设置过了，无法重复设置</string>
    <string name="setting_success">设置成功</string>
    <string name="in_time">入住日期</string>
    <string name="out_time">退房日期</string>
    <string name="passenger">位客人</string>
    <string name="room">间房</string>
    <string name="adult_room">成人/房</string>
    <string name="young">少年(12-15)/房</string>
    <string name="children">儿童(4-11)/房</string>
    <string name="is_early">是否含早</string>
    <string name="list_mode">列表模式</string>
    <string name="map_mode">地图模式</string>
    <string name="hotel_list">酒店列表</string>
    <string name="net_error">网络出错了哦，请重新再试。。</string>
    <string name="no_content">没有内容</string>
    <string name="no_result">暂无</string>
    <string name="error">服务器加载失败</string>
    <string name="no_money">获取酒店价格失败</string>
    <string name="no_time">请求超时，请重试。</string>
    <string name="setting_succeed">设置成功</string>
    <string name="ameri_link">AmeriLink</string>
    <string name="hotel_infor">酒店详情</string>
    <string name="hotel_address">地址</string>
    <string name="hotel_phone">电话</string>
    <string name="hotel_fix">传真</string>
    <string name="hotel_star">星级</string>
    <string name="no_smoking">no smoking</string>
    <string name="have_breakfast">have breakfast</string>
    <string name="hotel_intro">酒店介绍</string>
    <string name="sure">确定</string>
    <string name="room_type1">房型&#160;&#160; </string>
    <string name="room_food">&#160;&#160;&#160;&#160;&#160;&#160;餐制</string>
    <string name="room_money">均价(含税)</string>
    <string name="room_booking">预定</string>
    <string name="is_food">NO MEAL</string>
    <string name="room_cancel">取消规则</string>
    <string name="room_name">房间名称</string>
    <string name="room_error">加载房型信息失败</string>
    <string name="room_concel_infor_one">1,如果在</string>
    <string name="room_concel_infor">(酒店当地时间)之后取消或者是变更，或订房为入住则需要支付</string>
    <string name="room_concel_infor_money">费用\n2,如果在</string>
    <string name="room_concel_infor_second">(酒店当地时间) 之后取消或者是变更，或订房为入住，则需要支付2夜房费费用。</string>
    <string name="daohang">开始导航</string>
    <string name="no_room">没有可用房型</string>
    <string name="write_infor">填写信息</string>
    <string name="order_infor">订单详情</string>
    <string name="sum">合计</string>
    <string name="mr.">先生</string>
    <string name="miss.">女士</string>
    <string name="room_number">房间号#</string>
    <string name="name_tip">姓名输入注意事项: 请输入与客人的身份证件相符的姓名(仅限英文或汉语拼音)，酒店在入住时会核对身份证件</string>
    <string name="order_tip">订单修改政策：该预约不能修改，若您想更改入住日期或客人姓名请取消此订单并重新预定，新预定时房价有可能变动！</string>
    <string name="cancle_tip">1,如果在2018-08-30(酒店当地时间)之后取消或者是变更，或订房后为入住，则需支付$200费用。\n2,如果子啊2018-08-27(酒店当地时间)之后取消或者变更，或订房后未入住，则需支付2夜房费费用。</string>
    <string name="adult">成人</string>
    <string name="kids">儿童</string>
    <string name="master">儿童</string>
    <string name="pay_infor">支付信息</string>
    <string name="language_setting">语言设置</string>
    <string name="money_setting">货币类型</string>
    <string name="danwei_setting">单位选择</string>
    <string name="address">地址</string>
    <string name="room_type">房型</string>
    <string name="room_desc">房间描述</string>
    <string name="group_infor">团组信息</string>
    <string name="booking_name">订房员姓名</string>
    <string name="group_id">团号</string>
    <string name="special_request">特殊要求(不能保证)</string>
    <string name="sure_email">接收确认单的邮箱(*)</string>
    <string name="contact_phone">联系电话(*)</string>
    <string name="pay_way">付款方式</string>
    <string name="please_choice_pay_way">请选择付款方式</string>
    <string name="should_pay">应付总额:</string>
    <string name="can_use_lines">可供使用信用额度$8909</string>
    <string name="not_use_lines">不适用账户额度</string>
    <string name="other_pay_way">其他支付方式应付金额:$0</string>
    <string name="agree_terms">我同意预定该房间即表示我同意支付全额房费并接受</string>
    <string name="read_all_text">阅读全文</string>
    <string name="cancel">取消</string>
    <string name="booking">预定</string>
    <string name="passenger_infor">入住条件</string>
</resources>