<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--<LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       &lt;!&ndash; <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/my_background" />&ndash;&gt;

    </LinearLayout>-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:theme="@style/toobar_back_color"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_tool_bar"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/my_count"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/account_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="5dp">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_two"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/your_setting"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/setting_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="5dp">

        </ListView>
    </LinearLayout>

</RelativeLayout>