<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/search_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:theme="@style/toobar_back_color"
            app:titleTextAppearance="@style/Toolbar.TitleText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ameri_link"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </android.support.v7.widget.Toolbar>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/layout_one"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:background="#99323232"
                android:orientation="vertical">

                <!--搜索框-->
                <LinearLayout
                    android:id="@+id/layout_search_one"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/search_edit"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="6dp"
                        android:paddingTop="10dp"
                        android:text="@string/search"
                        android:textSize="18sp"
                        android:drawablePadding="3dp"
                        android:drawableLeft="@drawable/search_kuang"/>
                </LinearLayout>

                <!--时间选择框-->
                <LinearLayout
                    android:id="@+id/layout_search_two"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_weight="1"
                            android:text="@string/in_time"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="70dp"
                            android:layout_weight="1"
                            android:text="@string/out_time"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="#000000">
                    </View>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/in_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_weight="1"
                            android:text="2018/08/24"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/out_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:layout_weight="1"
                            android:text="2018/08/25"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <!--总的客人和房间数框-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/all_room_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/all_passenger"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textSize="16sp"
                            android:textColor="@color/yellow"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/passenger"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/all_room"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textSize="16sp"
                            android:textColor="@color/yellow"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </LinearLayout>

                <!--隐藏的跳进和条件搜索，添加客人和房间数框-->
                <LinearLayout
                    android:id="@+id/hiddened_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <!--总共多少间房-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/room_reduce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/jianhao3"/>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:id="@+id/room_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1"
                                android:textSize="16sp"
                                android:textColor="@color/yellow"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/room"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/room_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/jiahao"/>
                    </LinearLayout>

                    <!--每间房有多少个成人-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/adult_reduce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/jianhao3"/>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:id="@+id/adult_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1"
                                android:textSize="16sp"
                                android:textColor="@color/yellow"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/adult_room"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/adult_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/jiahao"/>
                    </LinearLayout>

                    <!--每间房有多少个少年-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/young_reduce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/jianhao3"/>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:id="@+id/young_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="16sp"
                                android:textColor="@color/yellow"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/young"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/yong_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/jiahao"/>
                    </LinearLayout>

                    <!--每间房有多少个儿童-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/children_reduce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/jianhao3"/>

                        <LinearLayout
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:id="@+id/children_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textSize="16sp"
                                android:textColor="@color/yellow"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/children"
                                android:textSize="16sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/children_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/jiahao"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="13dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/is_early"
                            android:textSize="16sp"
                            android:textColor="@color/black"/>

                        <Switch
                            android:id="@+id/is_early"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="132dp"/>

                    </LinearLayout>
                </LinearLayout>

                <!--确认搜索按钮-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="17dp"
                    android:background="@color/blue"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/search_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/blue"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>